# chatBotByManu

./: README.md
chatbot/: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
chatbot/channel/: admin.py  models.py  views.py
chatbot/channel/migrations/: 0002_alter_chat_start_time.py
chatbot/channel/providers/: telegram_provider.py
chatbot/channel/services/: channel_service.py
chatbot/channels/: views.py
chatbot/channels/config/: abstract_bot_config.py
chatbot/channels/providers/: telegram_provider.py
chatbot/channels/services/: abstract_channel_service.py  channel_service.py
chatbot/chat/: admin.py  apps.py  models.py  views.py
chatbot/chat/migrations/: 0001_initial.py  0002_alter_chat_start_time.py  0003_chat_chat_id_alter_chat_service_and_more.py  0004_alter_chat_contact_id.py  0005_rename_chat_id_chat_chat.py
chatbot/chat/providers/: abstract_provider_config.py  telegram_provider.py
chatbot/chat/repositories/: abstract_channel_repository.py  channel_repository.py
chatbot/chat/serializers/: chat_serializer.py  telegram_input_serializer.py
chatbot/chat/services/: abstract_channel_service.py  channel_service.py
chatbot/chat/utils/: bot_validator.py
chatbot/config/: settings.py  urls.py
chatbot/contact/: admin.py  models.py  views.py
chatbot/contact/migrations/: 0001_initial.py  0002_alter_contact_email_alter_contact_name.py
chatbot/contact/repositories/: abstract_contact_repository.py  contact_repository.py
chatbot/message/: models.py  views.py
chatbot/supportAgent/: admin.py  apps.py  models.py  views.py
(+20 files in other folders)
